+Fix crash condition that could occur when reload of file fails.
+Fix file encoding detection issue that some systems experienced.
+Fix UTF-16 decoding issues / regressions due to change in behavior between
python2.6 and 2.7.
+Fix error caused by empty file names getting into the file history which
could cause startup failures.

#-----------------------------------------------------------------------------#

VERSION 0.7.01
DATE 04/23/2012
50th Alpha Release

NEWS:
Update to fix issue with translations.

BUG FIXES:
+Fix localizations not loading correctly.

#-----------------------------------------------------------------------------#
VERSION 0.7.00
DATE 04/22/2012
49th Alpha Release

NEWS:
This is a stabilization and maintenance release targeting bugs that have been reported over the
last several months. Biggest fix is to try to correct some utf-8 handling errors
that were observed by some users of the 0.6.99 release. See release notes below
for specific changes in this release.

NEW: [features/enhancements]
+New version of CodeBrowser plugin (bug fixes for Python / XML / HTML)
+New version of Launch (configurable line buffering, bug fixes)
+Update all translations with current launchpad.

BUG FIXES:
+Fix error that could occur when selecting text in some environments under
certain cases.
+Fix crash that could occur during shutdown during page load.
+Fix crash that could occur when trying to retrieve binary data from clipboard to
update clipboard ring.
+Fix crash that could happen when replace in selection action finds no matches.
+Fix crash that could occur when starting Editra again immediately after closing
another running instance due to zombie IPC thread.
+Fix crash that could occur in vi emulation due to bad command mapping.
+Fix crashes that could occur when loading plugins that throw errors during
creation.
+Fix crash when system fails to return control reference when print is requested.
+Ensure requested locale is available prior to trying to create it.